name:                yesod-angular-ui
version:             0.1.0.0
-- synopsis:            
-- description:
homepage:            https://github.com/tolysz/yesod-angular-ui
bug-reports:         https://github.com/tolysz/yesod-angular-ui/issues
license:             BSD3
license-file:        LICENSE
author:              Marcin Tolysz
maintainer:          tolysz@gmail.com
copyright:           Copyright (c) 2014, Marcin Tolysz All rights reserved.
                     Copyright (c) 2012 Michael Snoyman, http://www.yesodweb.com/
                     Copyright 2010, Michael Snoyman. All rights reserved.
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
git@github.com:tolysz/yesod-angular-ui.git
library
  exposed-modules: Yesod.AngularUI
                 , Yesod.AngularUI.Router
             -- push for sheakspeere
                 , Text.Naked.Coffee
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.8
               ,       text
               ,       template-haskell
               ,       transformers
               ,       mtl
               ,       shakespeare
               ,       directory
               ,       yesod
               ,       yesod-core
               ,       containers
               ,       resourcet

  hs-source-dirs:      src
  default-language:    Haskell2010
  extensions: TemplateHaskell
              QuasiQuotes

source-repository head
  type:     git
  location: git://github.com/tolysz/yesod-angular-ui.git
